# GEOS

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .grapeconfig  .integrated_tests.yaml  .readthedocs.yml  .travis.yml  .uberenv_config.json  4  ACKNOWLEDGEMENTS  BASELINE_NOTES.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYRIGHT  HOW_TO_CONTRIBUTE.md  NOTICE  README.md  RELEASE  RELEASE_NOTES.md  ReactionDiffusionFEM.hpp  UPDATE_LOG  andre.cmake  azure-pipelines.yml  azure-pipelines.yml.old  configHCDump.txt  create_t_fracMesh.txt  file  geosx-key.json.enc  lassen-toss_4_ppc64le_ib-clang@=14.0.6-cuda.cmake  mesh hierarchy  quartz-toss_3_x86_64_ib-clang@10.0.1.cmake  quartz-toss_3_x86_64_ib-gcc@8.3.1.cmake  toEmacs.txt
components/: CMakeLists.txt
components/cmake/: CMakeBasics.cmake  geosxOptions.cmake
components/core/: CMakeLists.txt  uncrustify.cfg
components/core/src/: CMakeLists.txt
components/core/tests/: CMakeLists.txt  testDataTypes.cpp  testFloatingPointExceptions.cpp  testSFINAE.cpp  testStackTrace.cpp
components/docs/: CMakeLists.txt
components/docs/design/: Datastore.pptx
components/docs/dot/: state.dot
components/docs/sphinx/: CMakeLists.txt  file_io.rst
components/newComponentTemplate/src/: CMakeLists.txt  NewComponent.cpp  NewComponent.hpp
components/newComponentTemplate/tests/: CMakeLists.txt  testNewComponent.cpp
core/src/: CMakeLists.txt
core/src/DataStructures/: DataObject.cpp  DataObject.hpp
core/src/cmake/: CMakeBasics.cmake
core/src/codingUtilities/: stackTrace.hpp
core/src/dataRepository/: CMakeLists.txt  DataObject.hpp
core/src/main/: main.cpp
src/: .clang-format  .clang-tidy  CMakeGraphVizOptions.cmake  CMakeLists.txt  VERSION  codestyle.xml  conf.py  conf.py.in  geosx_astyle.ini  index.rst  uncrustify.cfg  uncrustify.cfg.old  yapf.cfg
src/cmake/: CMakeBasics.cmake  GFortranLib.cmake  GeosxConfig.cmake  GeosxMacros.cmake  GeosxOptions.cmake  GeosxVersion.cmake  geosxOptions.cmake
src/codingUtilities/: stackTrace.cpp  stackTrace.hpp
src/components/: CMakeLists.txt  uncrustify.cfg
src/components/PhysicsSolverPackage1/: .gitignore
src/components/core/: CMakeLists.txt  uncrustify.cfg
src/components/linearAlgebraInterface/: CMakeLists.txt
src/coreComponents/: CMakeLists.txt  dummy.cpp  oldSrc
src/coreComponents/MPI_Communications/: CMakeLists.txt  Communication.cpp  Communication.h  CommunicationTools.cpp  CommunicationTools.hpp  NeighborCommunicator.cpp  NeighborCommunicator.hpp  PartitionBase.cpp  PartitionBase.hpp  SpatialPartition.cpp  SpatialPartition.hpp
src/coreComponents/codingUtilities/: CMakeLists.txt  ConstexprConstructs.hpp  EnumBimap.hpp  EnumStrings.hpp  Functions.cpp  Functions.hpp  GeosxTraits.hpp  IOUtilities.hpp  Meta.hpp  Parsing.cpp  Parsing.hpp  Patterns.hpp  RTTypes.cpp  RTTypes.hpp  SFINAE_Macros.hpp  STLUtils.hpp  Section.cpp  Section.hpp  SourceCodeLocation.hpp  StringUtilities.cpp  StringUtilities.hpp  Table.cpp  Table.hpp  TableData.cpp  TableData.hpp  TableFormatter.cpp  TableFormatter.hpp  TableLayout.cpp  TableLayout.hpp  UnitTestUtilities.hpp  Utilities.hpp  static_if.hpp  traits.hpp
src/coreComponents/common/: BufferAllocator.cpp  BufferAllocator.hpp  CMakeLists.txt  DataLayouts.hpp  DataTypes.cpp  DataTypes.hpp  EnumStrings.hpp  FieldSpecificationOps.hpp  FixedSizeDeque.hpp  FixedSizeDequeWithMutexes.hpp  Format.hpp  FourMutexesLock.hpp  GEOS_RAJA_Interface.hpp  GeosxConfig.hpp  GeosxConfig.hpp.in  GeosxMacros.hpp  KernelLaunchSelectors.hpp  LifoStorage.hpp  LifoStorageCommon.hpp  LifoStorageCuda.hpp  LifoStorageHost.hpp  LogLevels.hpp  LogLevelsInfo.hpp  LogMsg.hpp  LogMsg.plantuml  Logger.cpp  Logger.hpp  Logger.plantuml  Logger_centralizedLoggingFunctions.plantuml  Logger_templatedLoggingObject.plantuml  MathAndPhysConstants.hpp  MemoryInfos.cpp  MemoryInfos.hpp  MpiWrapper.cpp  MpiWrapper.hpp  MultiMutexesLock.hpp  Path.cpp  Path.hpp  PhysicsConstants.hpp  SortedArray.hpp  (+25 more)
src/coreComponents/constitutive/: CMakeLists.txt  ConstitutiveBase.cpp  ConstitutiveBase.hpp  ConstitutiveManager.cpp  ConstitutiveManager.hpp  ConstitutivePassThru.hpp  ConstitutivePassThruHandler.hpp  ContinuumBase.cpp  ContinuumBase.hpp  Dummy.cpp  Dummy.hpp  ExponentialRelation.hpp  ExponentialRelation_impl.hpp  KilloughHysteresis.cpp  KilloughHysteresis.hpp  LinearElasticIsotropic.cpp  LinearElasticIsotropic.hpp  NullModel.cpp  NullModel.hpp
src/coreComponents/constitutiveDrivers/: CMakeLists.txt
src/coreComponents/coupling/: CMakeLists.txt  TribolCoupling.cpp  TribolCoupling.hpp
src/coreComponents/dataRepository/: Buffer.hpp  BufferOps.hpp  BufferOpsDevice.cpp  BufferOpsDevice.hpp  BufferOps_inline.hpp  CMakeLists.txt  ConduitRestart.cpp  ConduitRestart.hpp  DataContext.cpp  DataContext.hpp  DefaultValue.hpp  DynamicCasts.hpp  ExecutableGroup.cpp  ExecutableGroup.hpp  Group.cpp  Group.hpp  Group.rst  GroupContext.cpp  GroupContext.hpp  HistoryDataSpec.hpp  InputExtension.hpp  InputExtensionGroup.hpp  InputFlags.hpp  InputParsing.hpp  InputProcessing.hpp  KeyIndexT.hpp  KeyNames.hpp  LogLevelsInfo.hpp  LogLevelsRegistry.cpp  LogLevelsRegistry.hpp  ManagedGroup.cpp  ManagedGroup.hpp  MappedVector.hpp  MappedVector2.hpp  ObjectCatalog.hpp  Packing.hpp  (+29 more)
src/docs/: CMakeLists.txt  diagrams.pptx
src/externalComponents/: CMakeLists.txt  GEOSX_PTP
src/fdwave_raja/: CMakeLists.txt  constants.cpp  constants.hpp  data_setup.cpp  data_setup.hpp  fdwave-eqn.cpp  grid.cpp  grid.hpp  memoryManager.hpp  pml.cpp  pml.hpp  target_3d.cpp  target_3d.hpp
src/main/: CMakeLists.txt  main.cpp
src/pygeosx/: CMakeLists.txt  PyGroup.cpp  PyGroup.hpp  PySolver.cpp  PySolver.hpp  PySolver2.cpp  PySolver2.hpp  PyWaveSolver.cpp  PyWaveSolver.hpp  PyWrapper.cpp  PyWrapper.hpp  note  pygeosx.cpp  pygeosx.hpp  pygeosx_AcousticTest.xml  pygeosx_documentation.rst  pyssle.xml  reentrantTest.py  rentrantTest.py  test.py  test_WaveEquationAcousticSolverAdjoint.xml  test_WaveEquationAdjoint.py  testget.py
thirdPartyLibs/: CMakeLists.txt  cmake  tpl.cpp
(+10634 files in other folders)
